// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generate puml - AllShapes 1`] = `
"@startuml
title "All Shapes, plus testing "quotes""
left to right direction

hide stereotype
skinparam ranksep 60
skinparam nodesep 30
skinparam {
  arrowFontSize 10
  defaultTextAlignment center
  wrapWidth 200
  maxMessageSize 100
  shadowing false
}

skinparam rectangle<<RootEl1>>{
  BackgroundColor #1d4ed8
  FontColor #eff6ff
  BorderColor #1e40af
}
skinparam person<<RootEl2>>{
  BackgroundColor #1d4ed8
  FontColor #eff6ff
  BorderColor #1e40af
}
skinparam rectangle<<RootEl3>>{
  BackgroundColor #1d4ed8
  FontColor #eff6ff
  BorderColor #1e40af
}
skinparam rectangle<<RootEl4>>{
  BackgroundColor #1d4ed8
  FontColor #eff6ff
  BorderColor #1e40af
}
skinparam database<<RootEl5>>{
  BackgroundColor #1d4ed8
  FontColor #eff6ff
  BorderColor #1e40af
}
skinparam database<<RootEl6>>{
  BackgroundColor #1d4ed8
  FontColor #eff6ff
  BorderColor #1e40af
}
skinparam queue<<RootEl7>>{
  BackgroundColor #1d4ed8
  FontColor #eff6ff
  BorderColor #1e40af
}
skinparam rectangle<<RootEl8>>{
  BackgroundColor #1d4ed8
  FontColor #eff6ff
  BorderColor #1e40af
}
skinparam rectangle<<RootEl9>>{
  BackgroundColor #1d4ed8
  FontColor #eff6ff
  BorderColor #1e40af
}
skinparam component<<RootEl10>>{
  BackgroundColor #1d4ed8
  FontColor #eff6ff
  BorderColor #1e40af
}
rectangle ""Root" element" <<Root>> as Root {
  skinparam RectangleBorderColor<<Root>> #1d4ed8
  skinparam RectangleFontColor<<Root>> #1d4ed8
  skinparam RectangleBorderStyle<<Root>> dashed

  rectangle "==Element with \\n"rectangle" shape" <<RootEl1>> as RootEl1
  person "==Element with \\n"person" shape" <<RootEl2>> as RootEl2
  rectangle "==Element with \\n"browser" shape" <<RootEl3>> as RootEl3
  rectangle "==Element with \\n"mobile" shape" <<RootEl4>> as RootEl4
  database "==Element with \\n"cylinder" shape" <<RootEl5>> as RootEl5
  database "==Element with \\n"storage" shape" <<RootEl6>> as RootEl6
  queue "==Element with \\n"queue" shape" <<RootEl7>> as RootEl7
  rectangle "==Element with \\n"bucket" shape" <<RootEl8>> as RootEl8
  rectangle "==Element with \\n"document" shape" <<RootEl9>> as RootEl9
  component "==Element with \\n"component" shape" <<RootEl10>> as RootEl10
}

RootEl1 .[#777777,thickness=2].> RootEl2 : <color:#777777>With 'Label'
RootEl3 .[#777777,thickness=2].> RootEl4 : <color:#777777>With\\n\\n<color:#777777>'MultiLine'\\n\\n<color:#777777>Label
RootEl5 .[#777777,thickness=2].> RootEl6
@enduml
"
`;

exports[`generate puml - fakeComputedView 3 Levels 1`] = `
"@startuml
title "Context: Cloud"
top to bottom direction

hide stereotype
skinparam ranksep 60
skinparam nodesep 30
skinparam {
  arrowFontSize 10
  defaultTextAlignment center
  wrapWidth 200
  maxMessageSize 100
  shadowing false
}

skinparam rectangle<<Amazon>>{
  BackgroundColor #1d4ed8
  FontColor #eff6ff
  BorderColor #1e40af
}
skinparam rectangle<<Customer>>{
  BackgroundColor #1d4ed8
  FontColor #eff6ff
  BorderColor #1e40af
}
skinparam rectangle<<Support>>{
  BackgroundColor #1d4ed8
  FontColor #eff6ff
  BorderColor #1e40af
}
skinparam rectangle<<CloudBackendGraphql>>{
  BackgroundColor #1d4ed8
  FontColor #eff6ff
  BorderColor #1e40af
}
skinparam rectangle<<CloudBackendStorage>>{
  BackgroundColor #1d4ed8
  FontColor #eff6ff
  BorderColor #1e40af
}
skinparam rectangle<<CloudFrontendAdminPanel>>{
  BackgroundColor #1d4ed8
  FontColor #eff6ff
  BorderColor #1e40af
}
skinparam rectangle<<CloudFrontendDashboard>>{
  BackgroundColor #1d4ed8
  FontColor #eff6ff
  BorderColor #1e40af
}
rectangle "==amazon" <<Amazon>> as Amazon
rectangle "cloud" <<Cloud>> as Cloud {
  skinparam RectangleBorderColor<<Cloud>> #1d4ed8
  skinparam RectangleFontColor<<Cloud>> #1d4ed8
  skinparam RectangleBorderStyle<<Cloud>> dashed

  rectangle "backend" <<CloudBackend>> as CloudBackend {
    skinparam RectangleBorderColor<<CloudBackend>> #1d4ed8
    skinparam RectangleFontColor<<CloudBackend>> #1d4ed8
    skinparam RectangleBorderStyle<<CloudBackend>> dashed

    rectangle "==graphql" <<CloudBackendGraphql>> as CloudBackendGraphql
    rectangle "==storage" <<CloudBackendStorage>> as CloudBackendStorage
  }
  rectangle "==adminPanel" <<CloudFrontendAdminPanel>> as CloudFrontendAdminPanel
  rectangle "==dashboard" <<CloudFrontendDashboard>> as CloudFrontendDashboard
}
rectangle "==customer" <<Customer>> as Customer
rectangle "==support" <<Support>> as Support

CloudFrontendDashboard .[#777777,thickness=2].> CloudBackendGraphql
CloudFrontendAdminPanel .[#777777,thickness=2].> CloudBackendGraphql
CloudBackendStorage .[#777777,thickness=2].> Amazon
CloudBackendGraphql .[#777777,thickness=2].> CloudBackendStorage
Support .[#777777,thickness=2].> CloudFrontendAdminPanel
Customer .[#777777,thickness=2].> CloudFrontendDashboard
@enduml
"
`;

exports[`generate puml - fakeDiagram 1`] = `
"@startuml
title "fakeView"
top to bottom direction

hide stereotype
skinparam ranksep 60
skinparam nodesep 30
skinparam {
  arrowFontSize 10
  defaultTextAlignment center
  wrapWidth 200
  maxMessageSize 100
  shadowing false
}

skinparam rectangle<<Amazon>>{
  BackgroundColor #1d4ed8
  FontColor #eff6ff
  BorderColor #1e40af
}
skinparam rectangle<<Customer>>{
  BackgroundColor #1d4ed8
  FontColor #eff6ff
  BorderColor #1e40af
}
skinparam rectangle<<Support>>{
  BackgroundColor #1d4ed8
  FontColor #eff6ff
  BorderColor #1e40af
}
skinparam rectangle<<CloudBackend>>{
  BackgroundColor #1d4ed8
  FontColor #eff6ff
  BorderColor #1e40af
}
skinparam rectangle<<CloudFrontend>>{
  BackgroundColor #1d4ed8
  FontColor #eff6ff
  BorderColor #1e40af
}
rectangle "==amazon" <<Amazon>> as Amazon
rectangle "cloud" <<Cloud>> as Cloud {
  skinparam RectangleBorderColor<<Cloud>> #1d4ed8
  skinparam RectangleFontColor<<Cloud>> #1d4ed8
  skinparam RectangleBorderStyle<<Cloud>> dashed

  rectangle "==backend" <<CloudBackend>> as CloudBackend
  rectangle "==frontend" <<CloudFrontend>> as CloudFrontend
}
rectangle "==customer" <<Customer>> as Customer
rectangle "==support" <<Support>> as Support

CloudFrontend .[#777777,thickness=2].> CloudBackend : <color:#777777>requests
CloudBackend .[#777777,thickness=2].> Amazon
Support .[#777777,thickness=2].> CloudFrontend
Customer .[#777777,thickness=2].> CloudFrontend : <color:#777777>opens
@enduml
"
`;

exports[`generate puml - fakeDiagram2 1`] = `
"@startuml
title "frontend"
top to bottom direction

hide stereotype
skinparam ranksep 60
skinparam nodesep 30
skinparam {
  arrowFontSize 10
  defaultTextAlignment center
  wrapWidth 200
  maxMessageSize 100
  shadowing false
}

skinparam rectangle<<Client>>{
  BackgroundColor #1d4ed8
  FontColor #eff6ff
  BorderColor #1e40af
}
skinparam rectangle<<SystemBackend>>{
  BackgroundColor #1d4ed8
  FontColor #eff6ff
  BorderColor #1e40af
}
skinparam rectangle<<SystemFrontend>>{
  BackgroundColor #1d4ed8
  FontColor #eff6ff
  BorderColor #1e40af
}
rectangle "==client" <<Client>> as Client
rectangle "==backend" <<SystemBackend>> as SystemBackend
rectangle "==frontend" <<SystemFrontend>> as SystemFrontend

SystemFrontend .[#777777,thickness=2].> SystemBackend : <color:#777777>requests
Client .[#777777,thickness=2].> SystemFrontend : <color:#777777>opens
@enduml
"
`;

exports[`generate puml - with dashed identifiers 1`] = `
"@startuml
title "Test Dashed Identifiers"
top to bottom direction

hide stereotype
skinparam ranksep 60
skinparam nodesep 30
skinparam {
  arrowFontSize 10
  defaultTextAlignment center
  wrapWidth 200
  maxMessageSize 100
  shadowing false
}

skinparam rectangle<<PaymentGateway>>{
  BackgroundColor #1d4ed8
  FontColor #eff6ff
  BorderColor #1e40af
}
skinparam rectangle<<EmailProvider>>{
  BackgroundColor #0284c7
  FontColor #f0f9ff
  BorderColor #0369a1
}
skinparam person<<Customer>>{
  BackgroundColor #1d4ed8
  FontColor #eff6ff
  BorderColor #1e40af
}
rectangle "==Payment Gateway" <<PaymentGateway>> as PaymentGateway
rectangle "==Email Provider\\n<size:10>[Rest API]</size>" <<EmailProvider>> as EmailProvider
person "==Customer" <<Customer>> as Customer

PaymentGateway .[#777777,thickness=2].> EmailProvider : <color:#777777>sends notifications
Customer .[#777777,thickness=2].> PaymentGateway : <color:#777777>makes payment
@enduml
"
`;
